# pympler

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  MANIFEST.in  NOTICE  README  README.md  developer-notes.txt  mypy.ini  run.py  runtest.py  setup.cfg  setup.py
.github/workflows/: python-package.yml
debian/: changelog  control  copyright  rules
doc/: Makefile  requirements.txt
doc/source/: asizeof.rst  changes.rst  classtracker.rst  conf.py  copyright.rst  detailed_toc.rst  django.rst  glossary.rst  heapmonitor.rst  index.rst  intro.rst  muppy.rst  process.rst  related.rst
examples/: classtracker.py  garbage.py
pympler/: __init__.py  asizeof.py  charts.py  classtracker.py  classtracker_stats.py  debug_panel.py  garbagegraph.py  metadata.py  mprofile.py  muppy.py  panels.py  process.py  refbrowser.py  refgraph.py  summary.py  tracker.py  web.py
pympler/asizeof/: __init__.py  asizeof.py
pympler/gui/: charts.py  garbage.py  graph.py  web.py
pympler/heapmonitor/: __init__.py  heapmonitor.py
pympler/muppy/: __init__.py  mprofile.py  muppy.py  refbrowser.py  refbrowser_gui.py  summary.py  tracker.py
pympler/sizer/: __init__.py  asizeof.py
templates/: asized_referents.tpl  garbage.tpl  garbage_index.tpl  header.tpl  index.tpl  process.tpl  referents.tpl  stacktrace.tpl  style.css  tracker.tpl  tracker_class.tpl
test/: runtest.py  test_all.py  test_process.py  testutils.py
tmp/: feature-overview.txt  pympler.txt
tools/: pychok.py  release_test.sh  sphinx.py
views/: garbage.tpl  header.tpl  style.css  tracker.tpl
(+73 files in other folders)
