[metadata]
name = Pympler
version = attr: pympler.__version__
license = Apache License, Version 2.0
url = https://github.com/pympler/pympler
description = A development tool to measure, monitor and analyze the memory behavior of Python objects.
author = Jean Brouwers, Ludwig Haehne, Robert Schuppenies
long_description = file: README.md
long_description_content_type = text/markdown

[build_sphinx]
source-dir = doc/source
build-dir = doc

[pycodestyle]
ignore = E741,E226,E241,W504
max-line-length = 80
exclude = asizeof.py,util
